--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,6 @@ a:hover {
     position: relative;
     display: flex;
     justify-content: space-between;
-    align-items:center;
 }
 
 .header__navbar{
@@ -91,19 +90,14 @@ a:hover {
 }
 
 /*menu*/
-
-
 .menu__list {
     display: flex;
     align-items:center;
+    column-gap: 35px;
 }
 
 .menu__list:first-child {
     padding: 0;
-}
-
-.menu__item {
-    margin-right: 35px;
 }
 
 .menu__item:last-child {
@@ -136,8 +130,8 @@ a:hover {
 /*right block*/
 .header__right-block {
     display: flex;
-    justify-content: space-between;
-    align-items:center;
+    column-gap: 136px;
+    align-items: center;
 }
 
 .header__personal {
@@ -152,7 +146,7 @@ a:hover {
     background-color: #ffd68f;
     position: absolute;
     top:50%;
-    left: 160%;
+    left: 140%;
 }
 
 
@@ -161,10 +155,7 @@ a:hover {
     padding: 0;
     display: flex;
     align-items:center;
-}
-
-.personal__list-item {
-    margin-right: 45px;
+    gap: 45px;
 }
 
 .personal__list-item:last-child {
@@ -179,10 +170,11 @@ a:hover {
     background-color: #fff;
     position: absolute;
     top: -10px;
-    display: inline-block;
+    display: flex;
     height: 18px;
     width: 18px;
     text-align: center;
+    justify-content: center;
     border-radius: 50%;
     line-height: 2;
     font-size: 10px;
@@ -195,37 +187,19 @@ a:hover {
 
 /*social*/
 .social__list {
-    padding: 0;
     display: flex;
     align-items:center;
+    column-gap: 10px;
 }
-
-.social__list-item {
-    background-color: #fff;
-    width: 35px;
-    height: 35px;
-    margin-right: 10px;
-    border-radius: 50%;
-    text-align: center;
-    vertical-align: middle;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.social__list-item:last-child {
-    margin-right: 0;
-}
-
 
 .social__link {
-    display: inline-block;
+    display: flex;
+    align-items:center;
+    justify-content: center;
     height: 35px;
-    max-width: 35px;
+    min-width: 35px;
     max-height: 35px;
-    text-align: center;
     background-color:#fff;
-    line-height: 2.3;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
