--- a/css/index.css
+++ b/css/index.css
@@ -74,19 +74,18 @@ a:hover {
     background-position: center;
     background-size: cover;
     color: #fff;
+    display: flex;
+    flex-direction: column;
 }
 
 .header__top {
-    padding: 70px 100px 100px;
-    position: relative;
+    position: relative; 
     display: flex;
     justify-content: space-between;
-}
-
-.header__navbar{
-    display: flex;
-    justify-content: center;
-    align-items:center;
+    align-items: center;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 50px;
 }
 
 /*menu*/
@@ -99,7 +98,6 @@ a:hover {
 .menu__list:first-child {
     padding: 0;
 }
-
 .menu__item:last-child {
     margin-right: 0;
 }
@@ -114,6 +112,7 @@ a:hover {
 
 /*logo*/
 
+/*
 .header__logo {
     position: absolute;
     top: 50%;
@@ -124,6 +123,7 @@ a:hover {
     -ms-transform: translate(-50%,-50%);
     -o-transform: translate(-50%,-50%);
 }
+*/
 
 /*right block*/
 .header__right-block {
@@ -168,13 +168,13 @@ a:hover {
     background-color: #fff;
     position: absolute;
     top: -10px;
+    right: -13px;
     display: flex;
     height: 18px;
     width: 18px;
-    text-align: center;
+    align-items: center;
     justify-content: center;
     border-radius: 50%;
-    line-height: 2;
     font-size: 10px;
     color: black;
     -webkit-border-radius: 50%;
@@ -283,14 +283,15 @@ a:hover {
 
 .smoothies {
     padding: 98px;
+}
+
+.smoothies__container{
     display: flex;
     flex-direction:column;
     align-items:center;
 }
 
 .smoothies__title {
-    max-width: 637px;
-    height: 38px;
     margin: 0 0 55px;
 }
 
@@ -367,6 +368,9 @@ a:hover {
 
 .about {
     background-color: #14826f;
+}
+
+.about__container{
     display: flex;
 }
 
@@ -434,12 +438,10 @@ a:hover {
 
 .about__btn {
     color: #ffffff;
-    width: 39.5%;
+    width: 50%;
     height: 60px;
-    border-radius: 30px;
     border: solid 2px #f8b231;
     font-size: 21px;
-    text-decoration: none;
     position: relative;
     padding-left:29px;
     text-align:left;
@@ -676,6 +678,7 @@ a:hover {
     max-height: 148px;
     z-index: 0;
     position:absolute;
+    left: -15%;
 }
 
 .testimonials__author-name {
@@ -744,12 +747,13 @@ a:hover {
     background-image: url("./assets/images/photoshop-img/blog-Line.png");
     position:absolute;
     top: 10%;
-    right: -20px;
+    left: 42%;
 }
 
 .blog__title {
     margin: 0px 0 49px 0;
     font-size: 50px;
+    font-style: italic;
 }
 
 .blog__desc-title {
@@ -888,9 +892,17 @@ a:hover {
     background-color: #f6ab3b;
 
 }
+.footer__container {
+    max-width: 1717px;
+}
 
 .footer__logo {
     margin: 133px 0 182px 0 ;
+}
+
+.footer__top{
+    padding-left: 103px;
+    padding-right: 100px;
 }
 
 .footer h2 {
@@ -908,9 +920,6 @@ a:hover {
     display: flex;
     justify-content: space-between;
 }
-    /*
-    align-items: center;
-    */
 
 .footer__inner{
     display:flex;
