--- a/css/normalize.css
+++ b/css/normalize.css
@@ -13,6 +13,19 @@ html {
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
+li {
+  list-style: none;
+}
+
+button {
+  border:none;
+  font-family: inherit;
+}
+
+a {
+  text-decoration: none;
+  color:inherit;
+}
 /* Sections
    ========================================================================== */
 
