--- a/css/index.css
+++ b/css/index.css
@@ -274,6 +274,14 @@ a:hover {
     color: #1e1e1e;
 }
 
+.text--white {
+    color: #ffffff;
+}
+
+.text--orange{
+    color: #f7ae3b;
+}
+
 /*what are smoothies*/
 
 .smoothies {
@@ -471,7 +479,7 @@ a:hover {
     margin-top: 130px;
 }
 
-.products__card {;
+.products__card {
     flex: 1 0 300px;
     display:flex;
     flex-direction:column;
@@ -539,11 +547,12 @@ a:hover {
 }
 
 .story__wrapper{
-padding: 0 220px 0;
 display: flex;
+flex-wrap: wrap;
+justify-content: center;
 }
 
-.noname {
+.story__wrap {
     max-width: 510px;
 }
 
@@ -596,3 +605,93 @@ display: flex;
     top:0px;
     left:-170px;
 }
+
+.story__pic {
+    width: 100%;
+    height: 100%;
+}
+
+/*testimonials*/
+
+.testimonials {
+    background-color: #672f1b;
+    padding: 117px 0 118px;
+    position: relative;
+}
+
+.testimonials::after {
+    content: "";
+    display: block;
+    position:absolute;
+    background-image: url("./assets/images/photoshop-img/dots-img.png");
+    width: 410px;
+    height: 301px;
+    top:-95px;
+    right: 58px;
+}
+
+.testimonials__content {
+    display: flex;
+    flex-direction:column;
+    align-items:center;
+}
+
+.testimonial__title {
+    margin:0px 0 120px;
+}
+
+.testimonials span {
+    color: #f2612d;
+    text-decoration: uppercase;
+}
+
+.testimonials__comment {
+    display: flex;
+    margin-bottom: 121px;
+}
+
+.comment__text {
+    max-width: 455px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 52px 59px 0 0;
+}
+
+.comment__quote {
+    line-height: 35px;
+}
+
+.comment__cite {
+    font-family: 'Muli-Semi-BoldItalic';
+    line-height: 45px;
+}
+
+.comment__avatar {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.testimonials__arrows {
+    width: 160px;
+    display: flex;
+    justify-content: space-between;
+}
+
+/*
+.testimonials__author {
+    z-index: 0;
+    position:absolute;
+}
+
+.testimonials__author-name {
+    margin: 0;
+    padding: 0;
+    opacity: 0.6;
+    font-family: "Muli-ExtraBold";
+    font-size: 200px;
+    color: rgba(82, 25, 5, 0.6);
+    transform: translate(438px, 220px);
+}
+*/
