--- a/css/index.css
+++ b/css/index.css
@@ -832,13 +832,17 @@ a:hover {
     
 }
 
+.title--white {
+    color: #ffffff;
+}
+
 .footer__title {
     font-family: 'MulI-ExtraBold';
     font-size: 26px;
     font-weight: 800;
     line-height: 1.54;
     letter-spacing: -0.52px;
-    color: #ffffff;
+    margin-bottom: 35px;
 }
 
 .footer__top {
@@ -860,11 +864,6 @@ a:hover {
     max-width: 159px;
 }
 
-.information__title {
-    
-    margin-bottom: 42px;
-}
-
 .information__list-link {
     font-family: 'Muli-Bold';
     font-size: 18px;
@@ -876,10 +875,6 @@ a:hover {
 /*payment*/
 .payment {
     max-width:270px ;
-}
-
-.payment__title {
-    margin-bottom:32px;
 }
 
 .payment__img {
@@ -897,10 +892,6 @@ a:hover {
 /*subscribe*/
 .subscribe {
     width: 495px;
-}
-
-.subscribe__title {
-    margin-bottom:35px;
 }
 
 .subscribe__input {                    
