--- a/css/index.css
+++ b/css/index.css
@@ -82,6 +82,7 @@ a:hover {
     background-position: center;
     background-size: cover;
     position: relative;
+    background-attachment: fixed;
 }
 
 .header__top {
@@ -251,6 +252,14 @@ a:hover {
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
+}
+
+.btn--green-bg:hover::after {
+    transform: translateX(5px);
+    -webkit-transform: translateX(5px);
+    -moz-transform: translateX(5px);
+    -ms-transform: translateX(5px);
+    -o-transform: translateX(5px);
 }
 
 /*titles*/
@@ -498,7 +507,6 @@ a:hover {
     display:flex;
     flex-direction:column;
     align-items:center;
-    min-width: 360px;
 }
 
 .products div:nth-child(1) {
